hphp/test/slow/type_annotation/type_annotation4.php
<?hh // strict

// error: non-existent type constant
class C {
}

var_dump(type_structure(C::class, 'T'));
